src/datafusion-local/src/tests/snapshots/liquid_cache_datafusion_local__tests__os_selection.snap
---
source: src/datafusion-local/src/tests/mod.rs
expression: "format!(\"plan: \\n{}\\nvalues: \\n{}\\nstats:\\n{}\", plan, values, stats)"
---
plan: 
┌───────────────────────────┐
│          SortExec         │
│    --------------------   │
│         OS@0 DESC         │
└─────────────┬─────────────┘
┌─────────────┴─────────────┐
│       DataSourceExec      │
│    --------------------   │
│          files: 1         │
│                           │
│          format:          │
│       liquid_parquet      │
└───────────────────────────┘

values: 
+----+
| OS |
+----+
| 44 |
| 44 |
| 44 |
| 44 |
| 44 |
| 2  |
| 2  |
| 2  |
| 2  |
| 2  |
| 2  |
+----+
stats:
entries.total: 8
entries.after_first_run: 8
entries.memory.arrow: 3
entries.memory.liquid: 5
entries.disk.liquid: 0
entries.disk.arrow: 0
usage.memory_bytes: [bytes]
usage.disk_bytes: [bytes]
RuntimeStatsSnapshot:
  get: 3
  get_with_selection: 3
  eval_predicate: 4
  try_read_liquid_calls: 0
  read_io_count: 3
  write_io_count: 0
  disk_evictions: 3
  disk_reservation_failures: 0
  eval_predicate_on_liquid_failed: 0
