src/datafusion-local/src/tests/snapshots/liquid_cache_datafusion_local__tests__url_prefix_filtering.snap
---
source: src/datafusion-local/src/tests/mod.rs
expression: "format!(\"plan: \\n{}\\nvalues: \\n{}\\nstats:\\n{}\", plan, values, stats)"
---
plan: 
┌───────────────────────────┐
│       ProjectionExec      │
│    --------------------   │
│         count(*):         │
│      count(Int64(1))      │
└─────────────┬─────────────┘
┌─────────────┴─────────────┐
│       AggregateExec       │
│    --------------------   │
│       aggr: count(1)      │
│        mode: Final        │
└─────────────┬─────────────┘
┌─────────────┴─────────────┐
│   CoalescePartitionsExec  │
└─────────────┬─────────────┘
┌─────────────┴─────────────┐
│       AggregateExec       │
│    --------------------   │
│       aggr: count(1)      │
│       mode: Partial       │
└─────────────┬─────────────┘
┌─────────────┴─────────────┐
│      RepartitionExec      │
│    --------------------   │
│ partition_count(in->out): │
│           1 -> 4          │
│                           │
│    partitioning_scheme:   │
│     RoundRobinBatch(4)    │
└─────────────┬─────────────┘
┌─────────────┴─────────────┐
│       DataSourceExec      │
│    --------------------   │
│          files: 1         │
│                           │
│          format:          │
│       liquid_parquet      │
└───────────────────────────┘

values: 
+----------+
| count(*) |
+----------+
| 23113    |
+----------+
stats:
entries.total: 4
entries.after_first_run: 4
entries.memory.arrow: 2
entries.memory.liquid: 2
entries.disk.liquid: 0
entries.disk.arrow: 0
usage.memory_bytes: [bytes]
usage.disk_bytes: [bytes]
RuntimeStatsSnapshot:
  get: 0
  get_with_selection: 0
  eval_predicate: 4
  try_read_liquid_calls: 0
  read_io_count: 1
  write_io_count: 0
  disk_evictions: 1
  disk_reservation_failures: 0
  eval_predicate_on_liquid_failed: 0
